owncloud-notes (0.4)
* remove shipped flag to make it install fine in owncloud 6 and owncloud 5.13+

owncloud-notes (0.3)
* Adjust to work on ownCloud 5 after bugfix was backported
* Add a delete button

owncloud-notes (0.2)
* Move to App Framework and AngularJS
* Remember last note
* Fixed various bugs