@@ -1,3 +1,6 @@
+owncloud-notes (0.5)
+* Support Markdown preview when editing
+
 owncloud-notes (0.4)
 * remove shipped flag to make it install fine in owncloud 6 and owncloud 5.13+
 
